refactor: TeamWriteDto에서 participantIds와 watcherIds를 리스트로 받도록 변경